refactor: rename package adminOnly -> adminonly